# dirk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo-clippy.yml  cargo-publish.yml  cargo-test.yml
.helix/: config.toml
_shaku/: Cargo.toml
_shaku/examples/: coffee.rs  generic.rs
_teloc/: Cargo.toml
_teloc/examples/: coffee.rs  generic.rs
_waiter_di/: Cargo.toml
_waiter_di/examples/: coffee.rs
dirk/: Cargo.toml
dirk_macros/: Cargo.toml
dirk_macros/src/: errors.rs  expectable.rs  lib.rs  parse.rs  syntax.rs  use_injectable.rs  util.rs
dirk_macros/src/component/: binding.rs  error.rs  mod.rs  processor.rs  syntax.rs
dirk_macros/src/component/binding/: automatic.rs  bindable.rs  manual.rs
dirk_macros/src/provides/: error.rs  mod.rs  processor.rs  syntax.rs
dirk_macros/src/use_component/: error.rs  mod.rs
dirk_macros/src/use_injectable/: error.rs
dirk_macros/src/use_provides/: error.rs  mod.rs
examples/: application.rs  car.rs  coffee.rs  coffee_actual.rs  coffee_expanded.rs  generic.rs  mockall_coffee.rs
src/: lib.rs
stiletto_macros/: Cargo.toml
stiletto_macros/src/: binding.rs  component.rs  errors.rs  expectable.rs  lib.rs  scoped_inject.rs  singleton_inject.rs  static_inject.rs  stringify.rs  syntax.rs  use_injectable.rs  util.rs
stiletto_macros/src/component/: binding.rs  error.rs  mod.rs  syntax.rs
stiletto_macros/src/inject/: error.rs  mod.rs  scoped_inject.rs  singleton_inject.rs  static_inject.rs  syntax.rs
stiletto_macros/src/provides/: error.rs  mod.rs  syntax.rs
stiletto_macros/src/use_injectable/: error.rs
teloc/: Cargo.toml
test-data/application/: Cargo.toml
test-data/car/: Cargo.toml
test-data/coffee/: Cargo.toml
test-data/errors/: Cargo.toml
test-data/mockall_coffee/: Cargo.toml
tests/: errors.rs  examples.rs
tests/check_output/: mod.rs
tests/snapshots/: errors__errors@blueprint.snap  errors__errors@blueprint@status.snap  errors__errors@blueprint@stderr.snap  errors__errors@blueprint@stdout.snap  errors__errors@component_missing_binding.snap  (+36 more)
(+89 files in other folders)
