[package]
name = "stiletto"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stiletto_macros = { path = "stiletto_macros" }
once_cell = "1.19.0"

[dev-dependencies]
insta = { version = "1.40.0", features = ["filters"] }
tempdir = "0.3.7"
test-case = "3.1.0"
