[package]
name = "dirk"
version = "0.1.0"
edition = "2021"

description = "Dependency Injection for Rust"
repository = "https://github.com/hundsdor/dirk.git"
keywords = ["Dependency Injection"]
categories = ["rust-patterns"]

readme = "README.md" # TODO
license = "Apache-2.0" # TODO

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirk_macros = { path = "dirk_macros" }
once_cell = "1.19.0"

[dev-dependencies]
insta = { version = "1.40.0", features = ["filters"] }
tempdir = "0.3.7"
test-case = "3.1.0"
