[package]
name = "dirk_macros"
version = "0.1.0"
edition = "2021"

description = "Dependency Injection for Rust"
repository = "https://github.com/hundsdor/dirk.git"
keywords = ["dependency-injection", "inversion-of-control", "design-patterns"]
categories = ["rust-patterns"]

readme = "../README.md"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
proc-macro-error = "1.0.4"

convert_case = "0.6.0"
itertools = "0.13.0"

quote = "1.0.36"
syn = { version = "2.0.72", features = ["full", "extra-traits"] }

[dev-dependencies]
dirk = { path = ".." }
