[package]
name = "stiletto_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[profile.release]
debug = true

[dependencies]
proc-macro2 = "1.0.86"
proc-macro-error = "1.0.4"
thiserror = "1.0.64"

itertools = "0.13.0"

quote = "1.0.36"
syn = { version = "2.0.72", features = ["full", "extra-traits"] }
